{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e48423d3-ea0f-4bec-a0a5-ec272a45f3d2",
            "actions": [
                {
                    "name": "UseWeapon",
                    "type": "Button",
                    "id": "3df9ce4d-5d42-44fc-8c28-6b20f0d8a92d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectNextWeapon",
                    "type": "Button",
                    "id": "da2d8929-f648-48b1-a45e-036f99704c07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b5856bd-6f42-463d-8dbe-9a4c43173f67",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54f560e7-d960-46da-94db-cb4f837b1748",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}